# mypy-json-report

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  known-mypy-errors.json  mypy_json_report.py  pyproject.toml  tox.ini
.github/: renovate.json
.github/workflows/: pre-commit.yml  release-to-pypi.yml  tests.yml
mypy_json_report/: __init__.py  __main__.py  cli.py  exit_codes.py  parse.py
tests/: test_mypy_json_report.py  test_parse_command.py
