[project]
name = "mypy-json-report"
version = "1.3.0"
description = "Generate a JSON report from your mypy output"
authors = [
    {name = "Charlie Denton", email = "charlie@meshy.co.uk"},
    {name = "Jeppe Fihl-Pearson", email = "jeppe@tenzer.dk"},
]
license = "Apache-2.0"
repository = "https://github.com/memrise/mypy-json-report"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">= 3.9"
dependencies = []

[project.urls]
Source = "https://github.com/memrise/mypy-json-report"

[project.scripts]
mypy-json-report = "mypy_json_report.cli:main"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
tox = "*"
tox-gh-actions = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
