[project]
name = "mypy-json-report"
version = "1.4.0"
description = "Generate a JSON report from your mypy output"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Charlie Denton", email = "charlie@meshy.co.uk"},
    {name = "Jeppe Fihl-Pearson", email = "jeppe@tenzer.dk"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

requires-python = ">= 3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy==2.3.0",
    "pytest==9.1.1",
]

[project.scripts]
mypy-json-report = "mypy_json_report.cli:main"

[project.urls]
Homepage = "https://github.com/Memrise/mypy-json-report"
Documentation = "https://github.com/Memrise/mypy-json-report/blob/main/README.md"
Repository = "https://github.com/Memrise/mypy-json-report"
Issues = "https://github.com/Memrise/mypy-json-report/issues"
Changelog = "https://github.com/Memrise/mypy-json-report/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["mypy_json_report"]

[tool.mypy]
strict = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = false
